Use packge_home instead of chefcli_home
Signed-off-by: Marc A. Paradise <marc.paradise@gmail.com>

--- a/lib/chef-cli/completions/chef.fish.erb
+++ b/lib/chef-cli/completions/chef.fish.erb
@@ -1,4 +1,4 @@
-# Fish Shell command-line completions for ChefDK
+# Fish Shell command-line completions for <%=ChefCLI::Dist::PRODUCT %>
 
 function __fish_chef_no_command --description 'Test if chef has yet to be given the main command'
   set -l cmd (commandline -opc)
