Update all the links
Point to the latest docs site links

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/lib/chef-cli/skeletons/code_generator/templates/default/helpers.rb.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/helpers.rb.erb
@@ -1,6 +1,6 @@
 #
-# Chef Documentation
-# https://docs.chef.io/libraries.html
+# Chef Infra Documentation
+# https://docs.chef.io/libraries/
 #
 
 #
