--- a/lib/chef-cli/skeletons/code_generator/templates/default/kitchen.yml.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/kitchen.yml.erb
@@ -17,7 +17,7 @@ provisioner:
   always_update_cookbooks: true
 
   ## product_name and product_version specifies a specific Chef product and version to install.
-  ## see the Chef documentation for more details: https://docs.chef.io/config_yml_kitchen.html
+  ## see the Chef documentation for more details: https://docs.chef.io/workstation/config_yml_kitchen/
   #  product_name: chef
   #  product_version: 15
 
