--- a/lib/chef-cli/skeletons/code_generator/templates/default/kitchen_policyfile.yml.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/kitchen_policyfile.yml.erb
@@ -13,7 +13,7 @@ provisioner:
   name: chef_zero
 
   ## product_name and product_version specifies a specific Chef product and version to install.
-  ## see the Chef documentation for more details: https://docs.chef.io/config_yml_kitchen.html
+  ## see the Chef documentation for more details: https://docs.chef.io/workstation/config_yml_kitchen/
   #  product_name: chef
   #  product_version: 15
 
