--- a/lib/chef-cli/skeletons/code_generator/templates/default/resource.rb.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/resource.rb.erb
@@ -1,1 +1,1 @@
-# To learn more about Custom Resources, see https://docs.chef.io/custom_resources.html
+# To learn more about Custom Resources, see https://docs.chef.io/custom_resources/
