Update links in generators
Avoid redirects

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/lib/chef-cli/skeletons/code_generator/templates/default/inspec_default_test.rb.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/inspec_default_test.rb.erb
@@ -1,6 +1,6 @@
 # InSpec test for recipe <%= cookbook_name %>::<%= recipe_name %>
 
-# The InSpec reference, with examples and extensive documentation, can be
+# The Chef InSpec reference, with examples and extensive documentation, can be
 # found at https://docs.chef.io/inspec/resources/
 
 unless os.windows?
