--- a/lib/chef-cli/skeletons/code_generator/templates/default/kitchen_policyfile.yml.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/kitchen_policyfile.yml.erb
@@ -2,8 +2,8 @@
 driver:
   name: vagrant
 
-## The forwarded_port port feature lets you connect to ports on the VM guest via
-## localhost on the host.
+## The forwarded_port port feature lets you connect to ports on the VM guest 
+## via localhost on the host.
 ## see also: https://www.vagrantup.com/docs/networking/forwarded_ports
 
 #  network:
