wording updates and uses chefcli dist constants
Signed-off-by: Collin McNeese <cmcneese@chef.io>

--- a/lib/chef-cli/skeletons/code_generator/templates/default/compliance_dir_README.md.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/compliance_dir_README.md.erb
@@ -1,8 +1,8 @@
 # compliance
 
-This directory contains profile, waiver and input objects which are used with the Chef Infra Compliance Phase.
+This directory contains <%= ChefCLI::Dist::INSPEC_PRODUCT %> profile, waiver and input objects which are used with the <%= ChefCLI::Dist::INFRA_PRODUCT %> Compliance Phase.
 
-Detailed information on Compliance Phase can be found on the documentation site [https://docs.chef.io/chef_compliance_phase/].
+Detailed information on the <%= ChefCLI::Dist::INFRA_PRODUCT %> Compliance Phase can be found in the [Chef Documentation](https://docs.chef.io/chef_compliance_phase/).
 
 ```plain
 ./compliance
