--- a/lib/chef-cli/skeletons/code_generator/templates/default/compliance_profile_control.rb.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/compliance_profile_control.rb.erb
@@ -1,6 +1,6 @@
 # Cookbook:: <%= cookbook_name %>
 
-# The Chef InSpec reference, with examples and extensive documentation, can be
+# The <%= ChefCLI::Dist::INSPEC_PRODUCT %> reference, with examples and extensive documentation, can be
 # found at https://docs.chef.io/inspec/resources/
 
 control 'example_control' do
