--- a/lib/chef-cli/skeletons/code_generator/templates/default/compliance_profile_inspec.yml.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/compliance_profile_inspec.yml.erb
@@ -1,7 +1,7 @@
 ---
 # Cookbook:: <%= cookbook_name %>
 
-# The Chef InSpec reference, with examples and extensive documentation, can be
+# The <%= ChefCLI::Dist::INSPEC_PRODUCT %> reference, with examples and extensive documentation, can be
 # found at https://docs.chef.io/inspec/profiles/
 
 name: <%= @profile_name %>
@@ -10,7 +10,7 @@ maintainer: <%= copyright_holder %>
 copyright: <%= copyright_holder %>
 copyright_email: <%= email %>
 license: <%= @spdx_license %>
-summary: An InSpec Compliance Profile
+summary: A <%= ChefCLI::Dist::INSPEC_PRODUCT %> Compliance Profile
 version: 0.1.0
 supports:
   platform: os
