--- a/lib/chef-cli/skeletons/code_generator/templates/default/input.yml.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/input.yml.erb
@@ -1,7 +1,7 @@
 ---
 # Cookbook:: <%= cookbook_name %>
 
-# Additional information can be found on the Documentation site https://docs.chef.io/inspec/inputs/
+# Additional information can be found on the <%= ChefCLI::Dist::INSPEC_PRODUCT %> Documentation site https://docs.chef.io/inspec/inputs/
 
 # Example Syntax:
 input_a_name: input_a_value
