--- a/lib/chef-cli/skeletons/code_generator/templates/default/waiver.yml.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/waiver.yml.erb
@@ -1,7 +1,7 @@
 ---
 # Cookbook:: <%= cookbook_name %>
 
-# Additional information can be found on the Documentation site https://docs.chef.io/inspec/waivers/
+# Additional information can be found on the <%= ChefCLI::Dist::INSPEC_PRODUCT %> Documentation site https://docs.chef.io/inspec/waivers/
 
 # Example Syntax:
 control_id_to_waive:
