--- a/lib/chef-cli/skeletons/code_generator/templates/default/compliance_dir_README.md.erb
+++ b/lib/chef-cli/skeletons/code_generator/templates/default/compliance_dir_README.md.erb
@@ -11,15 +11,15 @@ Detailed information on the <%= ChefCLI::Dist::INFRA_PRODUCT %> Compliance Phase
 └── waivers
 ```
 
-Use the `chef generate` command from Chef Workstation to create content for these directories:
+Use the `<%= ChefCLI::Dist::EXEC %> generate` command from <%= ChefCLI::Dist::PRODUCT %> to create content for these directories:
 
 ```sh
-# Generate an InSpec profile
-chef generate profile PROFILE_NAME
+# Generate a <%= ChefCLI::Dist::INSPEC_PRODUCT %> profile
+<%= ChefCLI::Dist::EXEC %> generate profile PROFILE_NAME
 
-# Generate an InSpec waiver file
-chef generate waiver WAIVER_NAME
+# Generate a <%= ChefCLI::Dist::INSPEC_PRODUCT %> waiver file
+<%= ChefCLI::Dist::EXEC %> generate waiver WAIVER_NAME
 
-# Generate an InSpec input file
-chef generate input INPUT_NAME
+# Generate a <%= ChefCLI::Dist::INSPEC_PRODUCT %> input file
+<%= ChefCLI::Dist::EXEC %> generate input INPUT_NAME
 ```
