Updated the shell-init command to work with habitat and omnibus installations
Signed-off-by: Ashique Saidalavi <Ashique.saidalavi@progress.com>

--- a/lib/chef-cli/completions/bash.sh.erb
+++ b/lib/chef-cli/completions/bash.sh.erb
@@ -2,4 +2,4 @@ _chef_comp() {
     local COMMANDS="<%= commands.keys.join(' ')-%>"
     COMPREPLY=($(compgen -W "$COMMANDS" -- ${COMP_WORDS[COMP_CWORD]} ))
 }
-complete -F _chef_comp chef
+complete -F _chef_comp <%= habitat? ? "chef-cli" : "chef" %>
